---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 26. 03. 2018
  Changes:
    - Added support for NiceFill mod when using "bridge water" option
  Bugfixes:
    - Fixed autopilot not working with ghost driver
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 29. 01. 2018
  Bugfixes:
    - Fixed settings not being saved
    - Fixed some errors in Bulldozer/Maintenance mode
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 19. 01. 2018
  Bugfixes:
    - Fixed poles not being placed correctly when driving diagonally
  Changes:
    - Added option to display a message when using the hotkey to toggle between automatic and manual mode
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 13. 01. 2018
  Bugfixes:
    - Fixed errors with autopilot
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 13. 12. 2017
  Changes:
    - Updated for Factorio 0.16